# mcp-azure-devops

./: .gitignore  CLAUDE.md  LICENSE  README.md  azure-devops-mcp.yaml  download-docs.ps1  pyproject.toml  requirements.txt  start_server.sh
src/mcp_azure_devops/: __init__.py  __main__.py  server.py
src/mcp_azure_devops/features/: __init__.py
src/mcp_azure_devops/features/projects/: __init__.py  common.py  tools.py
src/mcp_azure_devops/features/teams/: __init__.py  common.py  tools.py
src/mcp_azure_devops/features/work_items/: __init__.py  common.py  formatting.py  tools.py
src/mcp_azure_devops/features/work_items/tools/: __init__.py  comments.py  create.py  process.py  query.py  read.py  templates.py  types.py
src/mcp_azure_devops/models/: __init__.py
src/mcp_azure_devops/resources/: __init__.py  work_items.py
src/mcp_azure_devops/tools/: __init__.py
src/mcp_azure_devops/utils/: __init__.py  azure_client.py  conventions_promp.py
tests/: __init__.py  test_server.py
tests/features/: __init__.py
tests/features/projects/: __init__.py  test_tools.py
tests/features/teams/: __init__.py  test_tools.py
tests/features/work_items/: __init__.py  test_create.py  test_process.py  test_templates.py  test_tools.py  test_types.py
